--- a/chatbot-project/src/components/ChatInput.css
+++ b/chatbot-project/src/components/ChatInput.css
@@ -8,6 +8,16 @@
     font-size: 15px;
     cursor: pointer;
   }
+  .clear-button{
+    background-color: #dae8e2;
+    color: rgb(0, 0, 0);
+    padding: 12px 20px;
+    margin-left: 10px;
+    border: none;
+    border-radius: 10px;
+    font-size: 15px;
+    cursor: pointer;
+  }
   .chat-input{
     padding: 12px 15px;
     border-radius: 10px;
